tests/ui/unsafe/ranged_ints_const.stderr
error[E0133]: initializing type with `rustc_layout_scalar_valid_range` attr is unsafe and requires unsafe function or block
  --> $DIR/ranged_ints_const.rs:8:34
   |
LL | const fn foo() -> NonZero<u32> { NonZero(0) }
   |                                  ^^^^^^^^^^ initializing type with `rustc_layout_scalar_valid_range` attr
   |
   = note: initializing a layout restricted type's field with a value outside the valid range is undefined behavior

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0133`.
